--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:includeFontPadding">false</item>
     </style>
 
-    <!--  EditText style. -->
+    <!--  EditText style.  -->
     <style name="EditTextTextStyle"
         parent="Widget.AppCompat.EditText" >
         <item name="android:textSize">14sp</item>
@@ -35,9 +35,26 @@
         <item name="android:textColor">@color/dusty_orange</item>
     </style>
 
-    <!--  Button style  -->
+    <!--  Button style.  -->
     <style name="Bold.ButtonTextStyle">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <!--  TextView style.  -->
+    <style name="Bold.BlackTitleTextStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Bold.WhiteTitleTextStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Bold.WhiteSmallTextStyle">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
