--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -1,88 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".WalletTransactionFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".WalletTransactionFragment"
+        android:id="@+id/layout_wallet_transactionfilter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_listitem_border"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingVertical="8dp"
         >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_wallet_transactionfilter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_listitem_border"
+        <Button
+            android:id="@+id/btn_wallet_filterall"
+            style="@style/Medium"
+            android:layout_width="0dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="16dp"
+            android:padding="0dp"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:background="@drawable/bg_wallet_button"
+            app:backgroundTint="@null"
+            android:text="@string/wallet_filterall"
+            android:textColor="@color/black"
+            android:textSize="12sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:paddingVertical="8dp"
-            >
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_wallet_filterall"
-                style="@style/Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/bg_check_button"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="4dp"
-                android:text="@string/wallet_filterall"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                 />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_wallet_filterbuy"
-                style="@style/Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:background="@drawable/bg_check_button"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="4dp"
-                android:text="@string/wallet_filterbuy"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_wallet_filterall"
-                />
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_wallet_filtersell"
-                style="@style/Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:background="@drawable/bg_check_button"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="4dp"
-                android:text="@string/wallet_filtersell"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_wallet_filterbuy"
-                />
-            <Spinner
-                android:id="@+id/spinner_wallet_filter"
-                android:layout_width="88dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_border_4dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="16dp"
-                android:spinnerMode="dropdown"
             />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_wallet_filterbuy"
+            style="@style/Medium"
+            android:layout_width="0dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="4dp"
+            android:padding="0dp"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:background="@drawable/bg_wallet_button"
+            app:backgroundTint="@null"
+            android:text="@string/wallet_filterbuy"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_wallet_filterall"
+            />
+        <Button
+            android:id="@+id/btn_wallet_filtersell"
+            style="@style/Medium"
+            android:layout_width="0dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="4dp"
+            android:padding="0dp"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:background="@drawable/bg_wallet_button"
+            app:backgroundTint="@null"
+            android:text="@string/wallet_filtersell"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_wallet_filterbuy"
+            />
+        <Spinner
+            android:id="@+id/spinner_wallet_filter"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_round_border_4dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="16dp"
+            android:spinnerMode="dropdown"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- 프래그먼트? 들어갈 자리? -->
+</androidx.constraintlayout.widget.ConstraintLayout>
