--- a/app/src/main/res/layout/activity_selling.xml
+++ b/app/src/main/res/layout/activity_selling.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_selling"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -24,6 +25,8 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:id="@+id/text_view_recent"
             style="@style/Warm_grey_Medium"
             android:layout_width="wrap_content"
@@ -58,18 +61,22 @@
             app:layout_constraintStart_toEndOf="@+id/text_view_recent_money"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_view_two_stock"
+        <EditText
+            android:id="@+id/edit_text_input_stock"
             style="@style/Black_Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/two_stock"
+            android:background="@null"
+            android:inputType="number"
+            android:hint="0"
+            android:maxLength="4"
             android:textSize="36sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_stock_unit"
             app:layout_constraintEnd_toStartOf="@+id/text_view_stock_unit"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_recent_money" />
+            app:layout_constraintTop_toBottomOf="@+id/text_view_recent" />
 
 
         <TextView
@@ -81,7 +88,7 @@
             android:text="@string/stock_unit"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_view_two_stock"
+            app:layout_constraintStart_toEndOf="@+id/edit_text_input_stock"
             app:layout_constraintTop_toBottomOf="@+id/text_view_recent_money" />
 
         <TextView
@@ -89,38 +96,35 @@
             style="@style/Black_Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
             android:text="@string/total"
             android:textSize="14sp"
-            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_total_money"
             app:layout_constraintEnd_toStartOf="@+id/text_view_total_money"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_view_total_money"
             style="@style/Black_Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/total_money"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_money_unit2"
             app:layout_constraintEnd_toStartOf="@+id/text_view_left_parentheses"
-            app:layout_constraintStart_toEndOf="@+id/text_view_total"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_total" />
 
         <TextView
             android:id="@+id/text_view_money_unit2"
             style="@style/Black_Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/money_unit"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_left_parentheses"
             app:layout_constraintEnd_toStartOf="@+id/text_view_left_parentheses"
-            app:layout_constraintStart_toEndOf="@+id/text_view_total_money"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_total_money" />
 
 
         <TextView
@@ -128,26 +132,24 @@
             style="@style/Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/left_parentheses"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_result_money"
             app:layout_constraintEnd_toStartOf="@+id/text_view_result_money"
-            app:layout_constraintStart_toEndOf="@+id/text_view_money_unit2"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_money_unit2" />
 
         <TextView
             android:id="@+id/text_view_result_money"
             style="@style/Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/result_money"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_right_parentheses"
             app:layout_constraintEnd_toStartOf="@+id/text_view_right_parentheses"
-            app:layout_constraintStart_toEndOf="@+id/text_view_left_parentheses"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_left_parentheses" />
 
         <TextView
             android:id="@+id/text_view_right_parentheses"
@@ -160,7 +162,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_view_result_money"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_stock" />
 
         <TextView
             android:id="@+id/text_view_left_parentheses2"
@@ -286,7 +288,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/one"
                 android:textSize="20sp" />
@@ -299,7 +300,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/two"
                 android:textSize="20sp" />
@@ -312,7 +312,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/three"
                 android:textSize="20sp" />
@@ -328,7 +327,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/four"
                 android:textSize="20sp" />
@@ -341,7 +339,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/five"
                 android:textSize="20sp" />
@@ -354,7 +351,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/six"
                 android:textSize="20sp" />
@@ -370,7 +366,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/seven"
                 android:textSize="20sp" />
@@ -383,7 +378,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/eight"
                 android:textSize="20sp" />
@@ -396,7 +390,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/nine"
                 android:textSize="20sp" />
@@ -412,8 +405,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:paddingTop="16dp"
-                android:paddingBottom="20dp"
                 android:stateListAnimator="@null"
                 android:text="@string/all_delete"
                 android:textSize="14sp" />
@@ -426,7 +417,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/zero"
                 android:textSize="20sp" />
@@ -440,9 +430,9 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:paddingStart="32dp"
-                android:paddingTop="20dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="32dp"
-                android:paddingBottom="18dp"
+                android:paddingBottom="10dp"
                 android:contentDescription="@string/EmptyImage"
                 android:src="@drawable/ic_backspace_24_dp"
                 android:stateListAnimator="@null" />
